[gd_scene load_steps=11 format=3 uid="uid://dvvf8whnn8ymh"]

[ext_resource type="Script" uid="uid://d2bpanafcwgtt" path="res://Scenes/LineTracer/node_2d.gd" id="1_wtcfe"]
[ext_resource type="Texture2D" uid="uid://d14iojnspgy44" path="res://Textures/Rainbow/colourful-rainbow-gradient-background_1308-77977.jpg" id="2_0e48y"]
[ext_resource type="Script" uid="uid://dmfjnb7p7vpl3" path="res://Scenes/LineTracer/Particles.gd" id="3_m2f8w"]
[ext_resource type="Texture2D" uid="uid://dso50awp2j4gk" path="res://Textures/Particles/particles-single.png" id="4_txmba"]

[sub_resource type="Curve" id="Curve_5ttvt"]
_data = [Vector2(0.0957447, 0.483146), 0.0, 0.372769, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_wtcfe"]
offsets = PackedFloat32Array(0, 0.12)
colors = PackedColorArray(0.439216, 0.439216, 0.439216, 0, 1, 1, 1, 0.531)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_5ttvt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ttvt"]
radius = 13.0384

[sub_resource type="Curve" id="Curve_txmba"]
_data = [Vector2(0, 0.994681), 0.0, 0.0, 0, 0, Vector2(1, 0.0025295), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_txmba"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)
metadata/_snap_count = 2

[node name="Node2D" type="Node2D"]
script = ExtResource("1_wtcfe")
MaxLineDistance = 50

[node name="Line2D" type="Line2D" parent="."]
width = 20.0
width_curve = SubResource("Curve_5ttvt")
gradient = SubResource("Gradient_wtcfe")
texture = ExtResource("2_0e48y")
texture_mode = 2
joint_mode = 2

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("SegmentShape2D_5ttvt")

[node name="mouseArea" type="Area2D" parent="."]
collision_mask = 6
script = ExtResource("3_m2f8w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mouseArea"]
shape = SubResource("CircleShape2D_5ttvt")

[node name="CPUParticles2D" type="CPUParticles2D" parent="mouseArea"]
amount = 20
texture = ExtResource("4_txmba")
lifetime = 0.2
preprocess = 1.18
speed_scale = 0.32
randomness = 0.08
lifetime_randomness = 0.34
spread = 30.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 400.0
scale_amount_min = 0.1
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_txmba")
color_ramp = SubResource("Gradient_txmba")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="mouseArea" to="." method="_on_mouse_area_area_entered"]
